update inner html issue.

--- a/angular/src/app/main/checklist/task-details/task-details.component.html
+++ b/angular/src/app/main/checklist/task-details/task-details.component.html
@@ -103,7 +103,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <input [(ngModel)]="comment.body" class="form-control">
+                                        <input  innerHTML="{{comment.body}}" class="form-control">
                                     </div>
                                 </div>
                             </div>
