On Create/Edit Screens of chart of Accounts all fields are set as previously when we move to sub account and get back

--- a/angular/src/app/main/account/accounts/create-edit-accounts/create-edit-accounts.component.html
+++ b/angular/src/app/main/account/accounts/create-edit-accounts/create-edit-accounts.component.html
@@ -48,7 +48,8 @@
                                             <div class="dropdown-menu" >
                                                 <a class="dropdown-item" *ngFor="let item of accountTypeList"
                                                     (click)="accountTypeClick(item.id,item.name)">
-                                                    {{item.name}}</a>
+                                                    {{item.name}}
+                                                </a>
                                             </div>
                                         </div>
                                     </div>
