--- a/angular/src/app/main/exceptions/exceptions.component.html
+++ b/angular/src/app/main/exceptions/exceptions.component.html
@@ -53,26 +53,26 @@
                                     <tr>
                                         
                                         <th>
-                                            Date
+                                            {{"Date" | localize}}
 
                                         </th>
                                         <th>
-                                            Type
+                                            {{"Type" | localize}}
 
                                         </th>
                                         <th>
-                                            User
+                                            {{"User" | localize}}
 
                                         </th>
                                        
 
                                        
                                         <th>
-                                          Records
+                                          {{"Records" | localize}}
    
                                            </th>
                                            <th>
-                                            Error
+                                            {{"Error" | localize}}
      
                                              </th>
                                     </tr>
