--- a/angular/src/app/main/account/accountsubtype/create-or-edit-accountsubtype/create-or-edit-accountsubtype.component.html
+++ b/angular/src/app/main/account/accountsubtype/create-or-edit-accountsubtype/create-or-edit-accountsubtype.component.html
@@ -5,7 +5,7 @@
                 <div class="kt-portlet__head">
                     <div class="kt-portlet__head-label">
                         <h3 class="kt-portlet__head-title">
-                             <span>Create Account Sub Type</span>
+                             <span>{{"Create Account Sub Type" | localize}}</span>
                         </h3>
                     </div>
                     <div class="kt-portlet__head-toolbar">
@@ -20,7 +20,7 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <label for="title">Title</label>
+                                    <label for="title">{{"Title" | localize}}</label>
                                     <input autofocus type="text" class="form-control" id="title" name="title"
                                         [(ngModel)]="accountsSubType.title">
                                 </div>
@@ -29,7 +29,7 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <label for="description">Description</label>
+                                    <label for="description">{{"Description" | localize}}</label>
                                         <textarea class="form-control" [(ngModel)]="accountsSubType.description"  id="description" name="description"></textarea>
                                 </div>
                             </div>
@@ -38,7 +38,7 @@
                         </div>
                         <div class="form-group margin-top-5">
                             <button class="btn btn-brand" type="submit">
-                                Save
+                                {{"Save" | localize}}
                             </button>
                         </div>
                     </form>
