implement to get the user infromation from store.

--- a/angular/src/app/main/checklist/user-list-component/user-list-component.component.html
+++ b/angular/src/app/main/checklist/user-list-component/user-list-component.component.html
@@ -1,10 +1,10 @@
 <div class="form-group search-field">
     <ng-select [disabled]="disable"  bindLabel="name" placeholder="Search users" appendTo="body" [searchable]="true" [clearable]="true"
-         [(ngModel)]="input" name="input" (input)="onSearchUsers($event.target.value)" (change) = "userOnChange($event)">
+         [(ngModel)]="input" name="input" (change) = "userOnChange($event)">
         <ng-option [value]="item.id" *ngFor="let item of users">
             <img *ngIf="item.picture" class="imagedropdown" src="{{item.picture}}"/>
             <div *ngIf="!item.picture" class="kt-badge kt-badge--xl kt-badge--primary imagedropdown">{{item.name | firstLetterOfWords}}</div>
-            {{item.name}}
+            {{ item.name}}
         </ng-option>
     </ng-select>
 </div>
