--- a/angular/src/app/main/checklist/task-details/task-details.component.html
+++ b/angular/src/app/main/checklist/task-details/task-details.component.html
@@ -136,11 +136,11 @@
                                 </div>
                                 <div class="col-md-4">
 
-                                    <a class="action-btn"><img src="../../../../assets/img/edit.svg"
+                                    <a class="action-btn btn-pointer"><img src="../../../../assets/img/edit.svg"
                                             (click)="RedirectToEditTaskPage()"></a>
-                                    <a class="action-btn" (click)="deleteTask()"><img
+                                    <a class="action-btn btn-pointer" (click)="deleteTask()"><img
                                             src="../../../../assets/img/del.svg"></a>
-                                    <a class="action-btn" (click)="duplicateTask()"><img
+                                    <a class="action-btn btn-pointer" (click)="duplicateTask()"><img
                                             src="../../../../assets/img/dup.svg"></a>
                                 </div>
                             </div>
