--- a/angular/src/app/main/reconcilliation/amortized/amortized.component.css
+++ b/angular/src/app/main/reconcilliation/amortized/amortized.component.css
@@ -451,7 +451,7 @@
     }
     form.search-form .form-group::after{
         content: "";
-        /* background:center center/cover url(../../../../assets/img/search.png); */
+         background:center center/cover url(../../../../assets/img/search.png); 
       width: 16px;
       height: 16px;
       position: absolute;
