--- a/angular/src/app/main/reconcilliation/itemized/create-edit-itemized/create-edit-itemized.component.css
+++ b/angular/src/app/main/reconcilliation/itemized/create-edit-itemized/create-edit-itemized.component.css
@@ -107,6 +107,9 @@ color: #606060;
     display: inline-block;
     vertical-align: middle;
 }
+.comment{
+    width: 500px
+    }
 ::ng-deep .uppy-Dashboard-inner {
     min-height:220px !important;
     height: 220px !important;
