--- a/angular/src/app/main/reconcilliation/itemized/itemized-details/itemized-details.component.html
+++ b/angular/src/app/main/reconcilliation/itemized/itemized-details/itemized-details.component.html
@@ -74,30 +74,31 @@
 
                                 <div class="commentmainView show-comments">
                                     <div class="kt-widget3 ">
-                                        <div class="kt-widget3__item ">
+                                        <div *ngFor="let i of postedCommentList" class="kt-widget3__item ">
                                             <div class="comments-header kt-widget3__header">
                                                 <div class="kt-widget3__user-img">
                                                     <div class="kt-user-card-v2__pic">
                                                         <div class="kt-badge kt-badge--xl kt-badge--warning">
-                                                            I
-                                                        </div>
+                                                            {{i.userName | firstLetterOfWords}}</div>
                                                     </div>
                                                 </div>
                                                 <div class="kt-widget3__info">
                                                     <a class="kt-widget3__username">
-                                                        hammad
+                                                        {{i.userName}}
                                                     </a><br>
                                                 </div>
                                                 <span class="kt-widget3__status kt-font-info">
-                                                    2 days ago
+                                                    {{i.creationDateTime | momentFormat:'DD MMMM YYYY'}}
                                                 </span>
                                             </div>
                                             <div class="kt-widget3__body show-comments-inner">
-                                                Some Comments
+                                                <p class="kt-widget3__text commentViewBox" innerHTML="{{i.body}}">
+                                                </p>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
+                                
                                 <div class="form-group giveCommentView" *ngIf="commantBox">
                                     <label>Comments</label>
                                     <div (click)="commentClick()">
@@ -115,14 +116,14 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <input [(ngModel)]="comment.body" class="form-control">
+                                            <input [(ngModel)]="comment" class="form-control">
                                         </div>
                                     </div>
                                 </div>
 
                                 <div class="form-group " *ngIf="!commantBox">
                                     <label>Comments</label>
-                                    <p-editor [(ngModel)]="comment.body" name="HtmlEditorInput"
+                                    <p-editor [(ngModel)]="comment" name="HtmlEditorInput"
                                         [style]="{'height':'150px'}">
                                     </p-editor>
                                     <button class="btn btn-brand" (click)="onComment()">Comment</button>
