comments on amortized componets

--- a/angular/src/app/main/reconcilliation/amortized/create-edit-amortized/create-edit-amortized.component.css
+++ b/angular/src/app/main/reconcilliation/amortized/create-edit-amortized/create-edit-amortized.component.css
@@ -21,6 +21,9 @@
     cursor: pointer;
 
 }
+.comment{
+    width: 500px
+    }
 .select .options .option:hover:not(.btn-option){
 	color: white;
 	background-color: #000;
